--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -17,7 +17,7 @@
         <a class="nav-link disabled" href="/some-page">Some Page</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/admin">Admin</a>
+        <a class="nav-link" href="/login">Login</a>
       </li>
     </ul>
   </div>
