finish cruds for psots. remove contact-us and pages for no need because its just copy paste

--- a/src/app/admin/components/dashboard/dashboard.component.html
+++ b/src/app/admin/components/dashboard/dashboard.component.html
@@ -3,7 +3,8 @@
     <backend-nav></backend-nav>
   </div>
   <div class="col-10">
-    <p>dashboard works!</p>
+    <button type="button" class="btn btn-primary" (click)="goFront()">Back to frontend</button>
+    <p>dashboard content!</p>
   </div>
 </div>
 
