--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -11,13 +11,7 @@
         <a class="nav-link" href="/posts">Posts</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/contact-us">Contact Us</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="/some-page">Some Page</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/login">Login</a>
+        <a class="nav-link" href="/admin">Admin</a>
       </li>
     </ul>
   </div>
